--- a/css/tesla.css
+++ b/css/tesla.css
@@ -263,7 +263,7 @@ nav {
   text-align: left;
 }
 
-/* model3 section */
+/* section 1 model 3 */
 .model3 {
   height: 1010px;
   background: url("https://tesla-cdn.thron.com/delivery/public/image/tesla/b03da2fc-ecaa-4554-8df9-8f73e411f360/bvlatuR/std/2880x1800/model-3-hero-desktop")
@@ -299,7 +299,7 @@ nav {
   }
 }
 
-/* safety section */
+/* section 2 safety */
 .safety {
   height: 1010px;
   background-color: #fff;
@@ -371,6 +371,49 @@ nav {
   position: relative;
   bottom: -1%;
   right: -98%;
+}
+
+/* section 3 performance */
+.performance {
+  height: 1010px;
+  width: 100%;
+}
+
+.performance .section3_topcontainer .logo-pos {
+  position: relative;
+  bottom: -1%;
+  right: -1%;
+}
+
+.performance .section3_topcontainer .returnarrow-pos {
+  position: relative;
+  float: right;
+  top: -1%;
+  left: -1%;
+}
+
+.section3_topcontainer {
+  height: 80%;
+  background: url("https://tesla-cdn.thron.com/delivery/public/image/tesla/3489a82e-b19c-457a-86a4-7ea9ac91aa1c/bvlatuR/std/1920x1080/lhd-performance-hero-desktop")
+    no-repeat center center/cover;
+}
+.section3_topcontainer .feature-box {
+  text-align: left;
+}
+.section3_topcontainer .container {
+  padding-top: 0%;
+}
+.section3_bottomcontainer {
+  height: 20%;
+  padding: 50px 25%;
+}
+.performance .lefttext {
+  float: left;
+  width: 34%;
+}
+.performance .righttext {
+  float: left;
+  width: 60%;
 }
 
 /* section 9 order */
