--- a/css/ex15-5.css
+++ b/css/ex15-5.css
@@ -3,3 +3,34 @@
   padding: 0;
   margin: 0;
 }
+
+.flex-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: black;
+}
+
+.flex-container a{
+  text-decoration: none;
+  color: #f4f4f4;
+}
+
+.flex-container ul li{
+  list-style-type: none;
+  display: inline-flex;
+}
+
+.logo{
+  justify-self: flex-start;
+}
+
+.items{
+  justify-self: flex-end;
+}
+
+@media (max-width: 641px) {
+  
+}
+
+
